--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 3.24)
 
-set(HESTIA_PROJECT_VERSION "0.0.1" CACHE STRING "Version tag for releases")
-
-project(hestia VERSION ${HESTIA_PROJECT_VERSION} LANGUAGES C CXX)
+project(hestia VERSION ${CMAKE_PROJECT_VERSION} LANGUAGES C CXX)
 message(STATUS "Hestia Version: " ${CMAKE_PROJECT_VERSION})
 
 set(CMAKE_CXX_STANDARD 17)
