Fix api URL in nightly

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -226,8 +226,9 @@ Nightly_trigger:
   before_script:
     - apk add jq
   script: # Only run if the last dev pipeline succeeded (the scheduled pipeline is index 0)
-    - 'wget --header "PRIVATE-TOKEN: $(cat $CI_CUSTOM_JOB_TOKEN)" "$HESTIA_API_URL/pipelines/latest"'
-    - '[ $(jq --raw-output ''map(select(.ref == "devel")) | map(select(.source == "push")) | .[0] | .status'' latest)  != "success" ] && exit 1'
+    - 'wget --header "PRIVATE-TOKEN: $(cat $CI_CUSTOM_JOB_TOKEN)"
+      "$HESTIA_API_URL/pipelines?ref=devel&source=push&per_page=1"'
+    - '[ $(jq --raw-output ''.[] | .status'' latest)  != "success" ] && exit 1'
 
 Nightly_build:
   <<: *default_nightly_job
