--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -257,6 +257,7 @@ Nightly_E2E:
     - *install_base_dependencies
     - yum install -qy $(cat ${HESTIA_DEPS}/e2e_test);
     - *install_phobos
+    - *install_proxygen
     - pip3 install -r ${CI_PROJECT_DIR}/test/e2e_tests/requirements.txt;
     - pip3 install -r ${CI_PROJECT_DIR}/test/e2e_tests/phobos_requirements.txt;
   script:
