--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,9 +19,13 @@ set(CMAKE_INSTALL_INCLUDEDIR ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})
 
 option(HESTIA_BUILD_TESTS "Build Hestia tests." OFF)
 option(HESTIA_WITH_PHOBOS "Build Phobos Object Store Integration." ON)
+option(HESTIA_WITH_MOTR "Build the Cortx Motr Integration." OFF)
 option(HESTIA_WITH_PROXYGEN "Build the Proxyen webserver." OFF)
 option(HESTIA_WITH_S3_CLIENT "Build the S3 Client." ON)
-option(HESTIA_WITH_MOTR "Build the Cortx Motr Integration." OFF)
+
+if(${HESTIA_BUILD_TESTS})
+  option(HESTIA_TEST_REDIS "Test the Redis key-value store backend (requires Redis server)" OFF)
+endif()
 
 add_subdirectory(src)
 
