--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -228,12 +228,16 @@ Nightly_trigger:
   image: alpine:latest
   stage: .pre
   before_script:
-    - apk add jq
+    - apk add jq curl
   script: # Only run if the last dev pipeline succeeded (the scheduled pipeline is index 0)
     - 'wget --header "PRIVATE-TOKEN: $(cat $CI_CUSTOM_JOB_TOKEN)"
       "$HESTIA_API_URL/pipelines?ref=devel&source=push&per_page=1" -O res.json'
     - jq . res.json # For Debug
     - 'if [ $(jq --raw-output ''.[] | .status'' res.json)  != "success" ]; then exit 1; fi;'
+    - 'curl --request PUT -H "PRIVATE-TOKEN: $(cat $CI_CUSTOM_JOB_TOKEN)" 
+      "$HESTIA_API_URL/variables/CI_LAST_NIGHTLY_COMMIT_SHA" 
+      --form "value=$CI_COMMIT_SHA"' # Update last nightly build SHA
+
 
 Nightly_build:
   <<: *default_nightly_job
