--- a/test/data/phobos.conf
+++ b/test/data/phobos.conf
@@ -1,5 +1,5 @@
 [dss]
-connect_string = dbname=phobos host=phobosdb user=phobos password=phobos
+connect_string = dbname=phobos host=localhost user=phobos password=phobos
 
 [lrs]
 server_socket = /tmp/socklrs
