--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -89,15 +89,14 @@ stages:
 .default_job: &default_job
   image: rockylinux:8
   rules:
-    - if: $CI_PIPELINE_SOURCE == "schedule"
-      when: never
-    - if: $CI_COMMIT_TAG
-      when: never # No need to re-run CI for tags
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-      when: never # The branch pipeline will run for updated MRs
-    - if: $CI_COMMIT_REF_NAME == "master"
-      when: never # Master build are manual and pre-vetted
-    - when: on_success
+        && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "devel"
+      when: on_success
+    - if: $CI_PIPELINE_SOURCE == "push"
+        && $CI_COMMIT_REF_NAME != "master"
+        && $CI_COMMIT_REF_NAME != "devel"
+      when: manual
+    - when: never # Only run default pipeline to verify devel MRs
   tags:
     - docker
   variables:
@@ -154,7 +153,7 @@ Release:
     - make -C "${CMAKE_BUILD_DIR}" doxygen
     - make -C "${CMAKE_BUILD_DIR}" package
   artifacts:
-    name:  "$CI_JOB_STAGE-$CI_COMMIT_REF_SLUG"
+    name: "$CI_JOB_STAGE-$CI_COMMIT_REF_SLUG"
     paths:
       - ${CMAKE_BUILD_DIR}/*.rpm
     expire_in: 1 day
@@ -213,7 +212,8 @@ E2E_test:
     <<: *nightly_variables
   rules:
     - if: $CI_PIPELINE_SOURCE == "schedule"
-        && $CI_COMMIT_SHA != $CI_LAST_NIGHTLY_COMMIT_SHA # Only run if there are new commits
+        && $CI_COMMIT_SHA != $CI_LAST_NIGHTLY_COMMIT_SHA
+        && $CI_SCHEDULE_TYPE == "NIGHTLY"
       when: on_success
   before_script:
     - *update_distro
@@ -227,22 +227,6 @@ E2E_test:
     - make -C "${CMAKE_BUILD_DIR}" package
     - make -C "${CMAKE_BUILD_DIR}" package_source
     # TODO: Build and upload docs
-
-Nightly_trigger:
-  <<: *default_nightly_job
-  image: alpine:latest
-  stage: .pre
-  before_script:
-    - apk add jq curl
-  script: # Only run if the last dev pipeline succeeded (the scheduled pipeline is index 0)
-    - 'wget --header "PRIVATE-TOKEN: $(cat $CI_CUSTOM_JOB_TOKEN)"
-      "$HESTIA_API_URL/pipelines?ref=devel&source=push&per_page=1" -O res.json'
-    - jq . res.json # For Debug
-    - 'if [ $(jq --raw-output ''.[] | .status'' res.json)  != "success" ]; then exit 1; fi;'
-    - 'curl --request PUT -H "PRIVATE-TOKEN: $(cat $CI_CUSTOM_JOB_TOKEN)" 
-      "$HESTIA_API_URL/variables/CI_LAST_NIGHTLY_COMMIT_SHA" 
-      --form "value=$CI_COMMIT_SHA"' # Update last nightly build SHA
-
 
 Nightly_build:
   <<: *default_nightly_job
@@ -278,37 +262,82 @@ Nightly_deploy:
   script:
     - ${CI_PROJECT_DIR}/infra/scripts/ci/nightly_deploy.sh
   artifacts:
-    name:  "$CI_JOB_STAGE-$CI_COMMIT_REF_SLUG"
+    name: "$CI_JOB_STAGE-$CI_COMMIT_REF_SLUG"
     paths:
       - ${CMAKE_BUILD_DIR}/*.rpm
       - ${CMAKE_BUILD_DIR}/*.tar.gz
-    expire_in: 1 month
+    expire_in: 1 day
 
-# Note: To increment major release version update the CI variable manually
-Master_build:
+Nightly_cleanup:
+  <<: *default_nightly_job
+  image: alpine:latest
+  stage: .post
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+        && $CI_COMMIT_SHA != $CI_LAST_NIGHTLY_COMMIT_SHA
+        && $CI_SCHEDULE_TYPE == "NIGHTLY"
+      when: on_failure
+  before_script:
+    - apk add jq curl
+  script: # Stops repeat runs
+    - 'curl --request PUT -H "PRIVATE-TOKEN: $(cat $CI_CUSTOM_JOB_TOKEN)"
+      "$HESTIA_API_URL/variables/CI_LAST_NIGHTLY_COMMIT_SHA"
+      --form "value=$CI_COMMIT_SHA"'
+
+.master_build: &master_build
   <<: *default_nightly_job
   rules:
-    - if: $CI_COMMIT_REF_NAME == "master" && $CI_PIPELINE_SOURCE == "push"
-      when: manual
+    - if: $CI_COMMIT_REF_NAME == "master"
+        && $CI_PIPELINE_SOURCE == "push"
+      when: on_success
   stage: build
   variables:
     <<: *nightly_variables
-    HESTIA_PROJECT_VERSION: "${CI_RELEASE_VERSION}"
+    HESTIA_PROJECT_VERSION: "${CI_NIGHTLY_VERSION}"
+  after_script:
+    - ${CI_PROJECT_DIR}/infra/scripts/ci/master_deploy.sh
+
+Master_build:
+  <<: *master_build
+  after_script:
+    - ${CI_PROJECT_DIR}/infra/scripts/ci/master_post_build.sh
   artifacts:
-    name:  "$CI_JOB_STAGE-$CI_COMMIT_REF_SLUG"
+    name: "$CI_JOB_STAGE-$CI_COMMIT_REF_SLUG"
     paths:
       - ${CMAKE_BUILD_DIR}/*.rpm
       - ${CMAKE_BUILD_DIR}/*.tar.gz
-    expire_in: 1 hour
+    expire_in: 1 week
 
-Master_deploy:
+Master_deploy_current_build:
   <<: *default_nightly_job
-  image: alpine:latest
-  stage: deploy
   rules:
-    - if: $CI_COMMIT_REF_NAME == "master" && $CI_PIPELINE_SOURCE == "push"
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+        && $CI_COMMIT_REF_NAME == "master"
+        && $CI_SCHEDULE_TYPE == "DEPLOY_MASTER_PATCH"
+        && $CI_PATCH_RELEASE_VERSION != $CI_NIGHTLY_VERSION
       when: on_success
-  before_script:
-    - apk add curl
-  script: # Tag release, upload matching packages
-    - ${CI_PROJECT_DIR}/infra/scripts/ci/master_deploy.sh
+  variables:
+    <<: *nightly_variables
+    HESTIA_PROJECT_VERSION: "${CI_PATCH_RELEASE_VERSION}"
+
+Master_deploy_minor_build:
+  <<: *default_nightly_job
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+        && $CI_COMMIT_REF_NAME == "master"
+        && $CI_SCHEDULE_TYPE == "DEPLOY_MASTER_MINOR"
+      when: on_success
+  variables:
+    <<: *nightly_variables
+    HESTIA_PROJECT_VERSION: "${CI_MINOR_RELEASE_VERSION}"
+
+Master_deploy_major_build:
+  <<: *default_nightly_job
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+        && $CI_COMMIT_REF_NAME == "master"
+        && $CI_SCHEDULE_TYPE == "DEPLOY_MASTER_MAJOR"
+      when: on_success
+  variables:
+    <<: *nightly_variables
+    HESTIA_PROJECT_VERSION: "${CI_MAJOR_RELEASE_VERSION}"
