--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -95,6 +95,7 @@ stages:
     - if: $CI_PIPELINE_SOURCE == "push"
         && $CI_COMMIT_REF_NAME != "master"
         && $CI_COMMIT_REF_NAME != "devel"
+        && $CI_COMMIT_TAG == ""
       when: manual
     - when: never # Only run default pipeline to verify devel MRs
   tags:
