--- a/src/base/network/server/proxygen/CMakeLists.txt
+++ b/src/base/network/server/proxygen/CMakeLists.txt
@@ -8,18 +8,18 @@ else()
 endif()
 
 add_module(
-    MODULE_NAME proxygen_plugin 
+    MODULE_NAME proxygen_plugin
     HEADERS
-        ProxygenServer.h 
-        ProxygenRequestHandler.h 
-        ProxygenHandlerFactory.h 
-        ProxygenMessage.h          
+        ProxygenServer.h
+        ProxygenRequestHandler.h
+        ProxygenHandlerFactory.h
+        ProxygenMessage.h
     SOURCES
         ProxygenServer.cc
-        ProxygenRequestHandler.cc 
-        ProxygenHandlerFactory.cc 
+        ProxygenRequestHandler.cc
+        ProxygenHandlerFactory.cc
         ProxygenMessage.cc
-    INTERNAL_DEPENDENCIES 
+    INTERNAL_DEPENDENCIES
         server
     DEPENDENCIES
         proxygenhttpserver
@@ -28,3 +28,4 @@ add_module(
 )
 
 target_compile_options(hestia_proxygen_plugin PUBLIC -Wno-deprecated-declarations -Wno-nullability-completeness)
+add_dependencies(hestia_server hestia_proxygen_plugin)
