--- a/src/base/cli/CMakeLists.txt
+++ b/src/base/cli/CMakeLists.txt
@@ -4,8 +4,10 @@ add_module(
     MODULE_NAME cli 
     HEADERS
         DaemonManager.h
+        ConsoleInterface.h
     SOURCES
         DaemonManager.cc
+        ConsoleInterface.cc
     INTERNAL_DEPENDENCIES 
         common
     WITH_FILESYSTEM
