--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,6 +54,7 @@ stages:
     && (
       set -x;
       $CMAKE_INSTALL_CACHE_DIR/bin/cmake ${CI_PROJECT_DIR}
+      -DBUILD_SHARED_LIBS=OFF
       -DCMAKE_BUILD_TYPE="${CMAKE_BUILD_TYPE}"
       -DCMAKE_EXPORT_COMPILE_COMMANDS="${CMAKE_EXPORT_COMPILE_COMMANDS}"
       -DCMAKE_CXX_COMPILER="${CXX}"
